--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,8 @@ body {
   border-radius: 100px;
   width: 100px;
   min-height: 80%;
-  border: 1px solid rgba(0, 0, 0, 0.252);
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+  /* border: 1px solid rgba(0, 0, 0, 0.252); */
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.262);
   overflow-y: auto;
   overflow-x: visible;
   scrollbar-width: none;
@@ -1065,8 +1065,7 @@ body.dark-mode .data-table th.sortable:hover {
 }
 
 .data-table th.dragging {
-  opacity: 0.5;
-  background: #e3f2fd;
+
 }
 
 .data-table th.drag-over {
