--- a/dark-mode.css
+++ b/dark-mode.css
@@ -175,26 +175,28 @@ body.dark-mode .process-selector-dropdown:focus {
   box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
 }
 
-body.dark-mode .chart-card{
+body.dark-mode .chart-card {
   background: rgba(42, 48, 60, 0.7);
   border-color: rgba(102, 126, 234, 0.2);
 }
+
 body.dark-mode .line-chart-container {
   background: rgba(42, 48, 60, 0.7);
   border-color: rgba(102, 126, 234, 0.2);
 }
 
 
-body.dark-mode .line-chart-container:hover{
+body.dark-mode .line-chart-container:hover {
   box-shadow: 0 15px 40px rgba(102, 126, 234, 0.2);
 }
 
-body.dark-mode .chart-card:hover{
+body.dark-mode .chart-card:hover {
   border-color: rgba(102, 126, 234, 0.4);
   box-shadow: 0 15px 40px rgba(102, 126, 234, 0.2);
 
-  
+
 }
+
 body.dark-mode .line-chart-container:hover {
   border-color: rgba(102, 126, 234, 0.4);
 }
@@ -208,6 +210,7 @@ body.dark-mode .table-container {
   background: rgba(42, 48, 60, 0.7);
   border-color: rgba(102, 126, 234, 0.2);
 }
+
 body.dark-mode .table-section:hover {
   transform: translateY(-2px);
   border-color: rgba(102, 126, 234, 0.4);
@@ -533,19 +536,20 @@ body.dark-mode .menu-toggle-btn img {
   filter: brightness(0) invert(1);
 }
 
-body.dark-mode .btn-icon img{
+body.dark-mode .btn-icon img {
   filter: brightness(0) invert(1);
 }
 
-body.dark-mode .btn-send img{
+body.dark-mode .btn-send img {
   filter: brightness(0) invert(1);
 }
 
-body.dark-mode .custom-tooltip, body.dark-mode .custom-tooltip-arrow{
+body.dark-mode .custom-tooltip,
+body.dark-mode .custom-tooltip-arrow {
   filter: brightness() invert(1);
 }
 
-body.dark-mode .expand-btn{
+body.dark-mode .expand-btn {
   filter: brightness() invert(0.8);
 }
 
@@ -840,7 +844,23 @@ body.dark-mode .stat-value {
 }
 
 body.dark-mode .btn-add-column {
-      background: rgba(255, 255, 255, 0.05);
-    border-color: rgba(255, 255, 255, 0.1);
-    color: var(--text);
-  }
+  background: rgba(255, 255, 255, 0.05);
+  border-color: rgba(255, 255, 255, 0.1);
+  color: var(--text);
+}
+
+body.dark-mode .btn-add-column:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+body.dark-mode .btn-primary {
+  background: rgba(255, 255, 255, 0.05);
+  border-color: rgba(255, 255, 255, 0.1);
+  color: var(--text);
+}
+
+body.dark-mode .btn-primary:hover {
+  border-color: var(--text);
+  transform: translateY(-1px);
+  color: var(--text);
+}
